apps/demo/game-2048/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: game-2048
  labels:
    istio-injection: enabled
