apps/demo/game-2048/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: game-2048
  name: alb-ingress-2048
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: apps-alb-ingress-jaba
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingres-2048-nginx
  namespace: game-2048
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/issuer: letsencrypt-http01-staging
    service.beta.kubernetes.io/aws-load-balancer-name: apps-ingress-jaba
spec:
  ingressClassName: external-nginx
  tls:
  - hosts:
    - game2048.monitoring.devopstech.net
    secretName: game2048-monitoring-devopstech-net-key-pair
  rules:
  - host: game2048.monitoring.devopstech.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
